fix scrollbar react-perfect-scrollbar@1.5.8

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden; // an thanh cuon mac dinh cua trinh duyet
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
